--- a/frontend/src/components/others/CardLarge.module.css
+++ b/frontend/src/components/others/CardLarge.module.css
@@ -1,12 +1,17 @@
 .cardImg {
-  object-fit: cover;
   border-top-left-radius: 7px;
   border-bottom-left-radius: 7px;
-  overflow: hidden;
+  height: 100%;
+  width: 300px;   /* ajuste selon ton design */
+  object-fit: cover;
 }
 
 .shadow {
   box-shadow:
     5px 5px 10px rgba(0, 0, 0, 0.5),
    -5px -5px 10px rgba(255, 255, 255, 0.03);
+}
+
+.cadreEnglobant {
+  height: 200px;
 }
